# calyph-ant

./: .gitignore  Dockerfile  README.md  alembic.ini  cli.py  conftest.py  docker-compose.override.yml  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
alembic/: env.py  script.py.mako
alembic/versions/: 02e7f74b0b7e_add_workspace_upgrades_tier_.py  3b0b53044068_centralize_notification_dispatch_add_.py  6d0ac8746c2e_initial_schema.py  80be4cc31e05_increase_pg_version_length.py  81aa97b09106_0001_initial_schema.py  98619b81063d_add_history_in_db.py
core/: auth.py  config.py  db.py  exceptions.py  middleware.py
docs/: team-vs-workspace.md
domains/admin/: service.py
domains/ai/: providers.py
domains/backups/: engine.py  privileges.py
domains/billing/: flutterwave.py
domains/connections/: models.py  router.py  service.py
domains/extensions/: registry.py
domains/migrations/: router.py  service.py
domains/monitoring/: collector.py
domains/notifications/: emails.py  lifecycle.py  rate_limit.py  service.py  tasks.py  templates.py
domains/platform/: extension_catalogue.py
domains/query/: router.py  service.py
domains/schema/: ast_parser.py  auto_migration.py  builder.py  diff.py  introspection.py
domains/schema/router/: __init__.py  (+2 more)
domains/tables/: editor.py  importer.py  presence.py  router.py
domains/teams/: service.py
domains/users/: service.py
scripts/: seed.py  seed_extension_catalogue.py
shared/: pagination.py  pubsub.py  storage.py  telemetry.py  types.py
tests/: test_auth.py  test_health.py
worker/: celery.py
